[settings] 개발용 datasource 설정 application.yaml 생성

--- a/.gitignore
+++ b/.gitignore
@@ -7,4 +7,4 @@ HELP.md
 settings.gradle
 
 # hiding application.yaml
-src/main/resources/application-**.yaml
+!src/main/resources/application-DEV.yaml
