[email] 회원가입 시 이메일 인증 기능 추가 - application-KEY.yaml: 이메일 전송을 위한 smtp 계정정보 추가 - NormalUserService.java -> UserService.java로 변경 - UserController API 추가 구현   - [GET] /certification : 인증번호 요청   - [POST] /certification : 인증 수행
 - EmailUtil
  - 이메일 전송 기능 추가
  - 추후 비밀번호 찾기를 위해 Strategy Callback 패턴으로 변경

# ISSUE 14

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     compileOnly 'org.projectlombok:lombok'
 
+    // Java Email
+    implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
+
     // Database정
     runtimeOnly 'com.h2database:h2'
 //    runtimeOnly 'mysql:mysql-connector-java'
