--- a/build.gradle
+++ b/build.gradle
@@ -22,14 +22,19 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
 
     // Java Email
     implementation group: 'javax.mail', name: 'mail', version: '1.4.7'
 
-    // Database정
+    // Database
     runtimeOnly 'com.h2database:h2'
 //    runtimeOnly 'mysql:mysql-connector-java'
+    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
+
+    // jwt 라이브러리
+    implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
