[user-exception] 기타 등등 수정 - 먼저 해당 브랜치와 상관없는 수정을 한 점 죄송합니다 😅
- MySql 등록
    - 이제 인메모리 DB가 아닌 RDS의 MySQL을 사용하게 됩니다!
    - 현재는 ElastiCache 를 사용하지 않아 Redis를 MySQL 에서 사용하고 있으나, 추후 마이그레이션 예정입니다.

- Login 성공 시 데이터 반환 방식 수정
    - access_token, refresh_token을 헤더에 담아주던 방식에서, body에 담아주기로 변경했습니다.
    - 전송 방식은 LoginResponseDto.java를 참고하시기 바랍니다.

- CORS 디버깅
    - CORS에 문제가 생겨 디버깅을 실시했습니다.
    - 우선적으로 모든 요청에 대해서 allow를 했지만, 추후 도메인이 정해지면 수정 예정입니다.

- Spring Security (Success, Denied, Exception)Handler 생성
    - 모호하게 403 에러만 던져주던 방식에서 어떻게 실패했는지 에러코드를 알려주게끔 EntryPoint, Handler를 구현했습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
 
     // Database
     runtimeOnly 'com.h2database:h2'
-//    runtimeOnly 'mysql:mysql-connector-java'
+    runtimeOnly 'mysql:mysql-connector-java'
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
     // jwt 라이브러리
