--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ out/
 # exclude dev file
 !src/main/resources/application-DEV.yaml
 src/main/resources/application-**.yaml
+
+##
+application-aws.yml
