--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,8 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt:0.9.1'
 
     // Amazon S3
-    implementation 'org.springframework.cloud:spring-cloud-starter-aws'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'com.amazonaws:aws-java-sdk-s3'
 
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
