[refactoring3] 세번째 리팩토링 - Jpa Auditing CreatedBy 추가.     - 이제 계정정보를 읽어 CreatedBy를 입력해줍니다.
- Post Update 기능 완성
    - 작동하지 않던 Post Update 기능을 완성했습니다.

- GlobalExceptionHandler 추가
    - 그저 500 에러만 나던 익셉션들을 상황에 맞게 ResposneEntity로 반환해주게끔 ExceptionHandler를 추가했습니다.

--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
     implementation 'com.amazonaws:aws-java-sdk-s3'
 
+    // Bucket4J
+    implementation group: 'com.github.vladimir-bukhtoyarov', name: 'bucket4j-core', version: '7.6.0'
+
+
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
