--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -4,3 +4,14 @@ spring:
 
   jackson:
     time-zone: Asia/Seoul
+
+  application:
+    name: limsPhoto
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "prometheus"
+  metrics:
+    tags:
+      application: ${spring.application.name}
